--- a/src/core/composer.json
+++ b/src/core/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "swooletw/hyperf-framework",
+    "name": "swooletw/hyperf-core",
     "type": "library",
-    "description": "The framework package for Laravel Hyperf.",
+    "description": "The core package for Laravel Hyperf.",
     "license": "MIT",
     "keywords": [
         "php",
         "hyperf",
-        "framework",
+        "core",
         "swoole",
         "laravel-hyperf"
     ],
