--- a/src/auth/composer.json
+++ b/src/auth/composer.json
@@ -49,7 +49,7 @@
             "config": "LaravelHyperf\\Auth\\ConfigProvider"
         },
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-main": "0.1-dev"
         }
     },
     "config": {
