--- a/src/bus/composer.json
+++ b/src/bus/composer.json
@@ -49,7 +49,7 @@
             "config": "LaravelHyperf\\Bus\\ConfigProvider"
         },
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-main": "0.1-dev"
         }
     },
     "suggest": {
