--- a/src/devtool/composer.json
+++ b/src/devtool/composer.json
@@ -34,7 +34,7 @@
             "config": "LaravelHyperf\\Devtool\\ConfigProvider"
         },
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-main": "0.1-dev"
         }
     },
     "config": {
