--- a/src/jwt/composer.json
+++ b/src/jwt/composer.json
@@ -40,7 +40,7 @@
             "config": "LaravelHyperf\\JWT\\ConfigProvider"
         },
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-main": "0.1-dev"
         }
     },
     "config": {
