--- a/src/telescope/composer.json
+++ b/src/telescope/composer.json
@@ -35,7 +35,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-main": "0.1-dev"
         },
         "hyperf": {
             "config": "LaravelHyperf\\Telescope\\ConfigProvider",
