feat: add coroutine package

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
             "LaravelHyperf\\Config\\": "src/config/src/",
             "LaravelHyperf\\Container\\": "src/container/src/",
             "LaravelHyperf\\Cookie\\": "src/cookie/src/",
+            "LaravelHyperf\\Coroutine\\": "src/coroutine/src/",
             "LaravelHyperf\\Devtool\\": "src/devtool/src/",
             "LaravelHyperf\\Dispatcher\\": "src/dispatcher/src/",
             "LaravelHyperf\\Encryption\\": "src/encryption/src/",
@@ -57,6 +58,7 @@
             "src/bus/src/Functions.php",
             "src/cache/src/Functions.php",
             "src/config/src/Functions.php",
+            "src/coroutine/src/Functions.php",
             "src/event/src/Functions.php",
             "src/filesystem/src/Functions.php",
             "src/foundation/src/helpers.php",
@@ -118,8 +120,9 @@
         "laravel-hyperf/cache": "self.version",
         "laravel-hyperf/config": "self.version",
         "laravel-hyperf/container": "self.version",
-        "laravel-hyperf/core": "self.version",
         "laravel-hyperf/cookie": "self.version",
+        "laravel-hyperf/core": "self.version",
+        "laravel-hyperf/coroutine": "self.version",
         "laravel-hyperf/devtool": "self.version",
         "laravel-hyperf/dispatcher": "self.version",
         "laravel-hyperf/encryption": "self.version",
