chore: adjust "dev-main" in composer.json

--- a/src/broadcasting/composer.json
+++ b/src/broadcasting/composer.json
@@ -33,15 +33,15 @@
         "hyperf/pool": "~3.1.0",
         "hyperf/redis": "~3.1.0",
         "hyperf/stringable": "~3.1.0",
-        "laravel-hyperf/auth": "dev-master",
-        "laravel-hyperf/bus": "dev-master",
-        "laravel-hyperf/cache": "dev-master",
-        "laravel-hyperf/foundation": "dev-master",
-        "laravel-hyperf/framework": "dev-master",
-        "laravel-hyperf/queue": "dev-master",
-        "laravel-hyperf/router": "dev-master",
-        "laravel-hyperf/support": "dev-master",
-        "laravel-hyperf/object-pool": "dev-master"
+        "laravel-hyperf/auth": "dev-main",
+        "laravel-hyperf/bus": "dev-main",
+        "laravel-hyperf/cache": "dev-main",
+        "laravel-hyperf/foundation": "dev-main",
+        "laravel-hyperf/framework": "dev-main",
+        "laravel-hyperf/queue": "dev-main",
+        "laravel-hyperf/router": "dev-main",
+        "laravel-hyperf/support": "dev-main",
+        "laravel-hyperf/object-pool": "dev-main"
     },
     "suggest": {
         "ext-hash": "Required to use the Ably and Pusher broadcast drivers.",
