--- a/composer.json
+++ b/composer.json
@@ -93,13 +93,13 @@
         "hyperf/db-connection": "~3.1.0",
         "hyperf/engine": "^2.10",
         "hyperf/framework": "~3.1.0",
-        "hyperf/guzzle": "~3.1.0",
         "hyperf/http-server": "~3.1.0",
         "hyperf/memory": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/signal": "~3.1.0",
         "hyperf/translation": "~3.1.0",
         "hyperf/validation": "~3.1.0",
+        "hyperf/dispatcher": "~3.1.0",
         "nunomaduro/termwind": "^2.0",
         "friendsofhyperf/command-signals": "~3.1.0",
         "laravel/serializable-closure": "^1.3",
