--- a/src/core/composer.json
+++ b/src/core/composer.json
@@ -31,6 +31,9 @@
         "hyperf/http-message": "~3.1.0",
         "hyperf/redis": "~3.1.0"
     },
+    "require-dev": {
+        "fakerphp/faker": "^2.0"
+    },
     "config": {
         "sort-packages": true
     },
