--- a/src/support/composer.json
+++ b/src/support/composer.json
@@ -25,7 +25,8 @@
         "hyperf/support": "~3.1.0",
         "hyperf/stringable": "~3.1.0",
         "hyperf/tappable": "~3.1.0",
-        "hyperf/collection": "~3.1.0"
+        "hyperf/collection": "~3.1.0",
+        "nesbot/carbon": "^2.16"
     },
     "autoload": {
         "psr-4": {
