--- a/src/core/composer.json
+++ b/src/core/composer.json
@@ -29,6 +29,7 @@
         "php": "^8.2",
         "hyperf/database": "~3.1.0",
         "hyperf/http-message": "~3.1.0",
+        "hyperf/context": "~3.1.0",
         "hyperf/redis": "~3.1.0"
     },
     "require-dev": {
