--- a/src/filesystem/composer.json
+++ b/src/filesystem/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LaravelHyperf\\Filesystem": "src/"
+            "LaravelHyperf\\Filesystem\\": "src/"
         },
         "files": [
             "src/Functions.php"
