--- a/composer.json
+++ b/composer.json
@@ -105,7 +105,7 @@
         "laravel/serializable-closure": "^1.3",
         "lcobucci/jwt": "^5.0",
         "monolog/monolog": "^3.1",
-        "nesbot/carbon": "^2.16",
+        "nesbot/carbon": "^2.72.6",
         "ramsey/uuid": "^4.7",
         "symfony/error-handler": "^6.3",
         "league/commonmark": "^2.2",
@@ -146,7 +146,7 @@
     },
     "suggest": {
         "hyperf/redis": "Required to use redis driver. (^3.1).",
-        "hyperf/session": "Required to use session guard. (^3.1).",
+        "laravel-hyperf/session": "Required to use session guard. (^3.1).",
         "friendsofhyperf/tinker": "Required to use the tinker console command (^3.1).",
         "league/flysystem-read-only": "Required to use read-only disks (^3.3)",
         "aws/aws-sdk-php": "Required to use the SES mail driver (^3.235.5).",
