chore: skip tests for http client package

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,7 @@
         <testsuite name="Hyperf Packages Test Suite">
             <directory suffix="Test.php">./tests</directory>
             <exclude>./tests/Prompts</exclude>
+            <exclude>./tests/HttpClient</exclude>
         </testsuite>
     </testsuites>
     <php>
