--- a/src/http-client/composer.json
+++ b/src/http-client/composer.json
@@ -35,5 +35,10 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "0.1-dev"
+        }
     }
 }
