chore: update composer.json

--- a/src/auth/composer.json
+++ b/src/auth/composer.json
@@ -29,8 +29,8 @@
         "hyperf/config": "~3.1.0",
         "hyperf/database": "~3.1.0",
         "hyperf/http-server": "~3.1.0",
-        "laravel-hyperf/hashing": "~0.1.0",
-        "laravel-hyperf/jwt": "~0.1.0"
+        "laravel-hyperf/hashing": "^0.1",
+        "laravel-hyperf/jwt": "^0.1"
     },
     "suggest": {
         "laravel-hyperf/session": "Required to use session guard. (~0.1.0)"
