--- a/src/bus/composer.json
+++ b/src/bus/composer.json
@@ -30,8 +30,8 @@
         "hyperf/support": "~3.1.0",
         "nesbot/carbon": "^2.72.6",
         "laravel/serializable-closure": "^1.3",
-        "laravel-hyperf/support": "~0.1.0",
-        "laravel-hyperf/cache": "~0.1.0"
+        "laravel-hyperf/support": "^0.1",
+        "laravel-hyperf/cache": "^0.1"
 
     },
     "autoload": {
