--- a/src/notifications/composer.json
+++ b/src/notifications/composer.json
@@ -35,10 +35,10 @@
         "hyperf/contract": "~3.1.0",
         "hyperf/database": "~3.1.0",
         "hyperf/di": "~3.1.0",
-        "laravel-hyperf/support": "~0.1.0",
-        "laravel-hyperf/mail": "~0.1.0",
-        "laravel-hyperf/queue": "~0.1.0",
-        "laravel-hyperf/object-pool": "~0.1.0"
+        "laravel-hyperf/support": "^0.1",
+        "laravel-hyperf/mail": "^0.1",
+        "laravel-hyperf/queue": "^0.1",
+        "laravel-hyperf/object-pool": "^0.1"
     },
     "config": {
         "sort-packages": true
