--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   label:
-    name: 'Label PR based on title'
+    name: Label PR based on title
     runs-on: ubuntu-latest
     steps:
       - uses: srvaroa/labeler@v1.4
