--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,3 +75,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
+          name: v${{ steps.version.outputs.version }}
+          tag_name: v${{ steps.version.outputs.version }}
