--- a/src/notifications/composer.json
+++ b/src/notifications/composer.json
@@ -45,7 +45,9 @@
     },
     "extra": {
         "hyperf": {
-            "config": "LaravelHyperf\\Notifications\\ConfigProvider",
+            "config": "LaravelHyperf\\Notifications\\ConfigProvider"
+        },
+        "laravel-hyperf": {
             "providers": [
                 "LaravelHyperf\\Notifications\\NotificationServiceProvider"
             ]
