chore: update composer.json in notifications package

--- a/src/notifications/composer.json
+++ b/src/notifications/composer.json
@@ -32,9 +32,9 @@
         "hyperf/contract": "~3.1.0",
         "hyperf/collection": "~3.1.0",
         "hyperf/context": "~3.1.0",
-        "hyperf/contract": "~3.1.0",
         "hyperf/database": "~3.1.0",
         "hyperf/di": "~3.1.0",
+        "laravel-hyperf/broadcasting": "^0.1",
         "laravel-hyperf/support": "^0.1",
         "laravel-hyperf/mail": "^0.1",
         "laravel-hyperf/queue": "^0.1",
