--- a/src/http-client/composer.json
+++ b/src/http-client/composer.json
@@ -27,11 +27,10 @@
     },
     "require": {
         "php": "^8.2",
-        "hyperf/collection": "~3.1.0",
         "hyperf/macroable": "~3.1.0",
-        "hyperf/support": "~3.1.0",
         "guzzlehttp/guzzle": "^7.8.2",
-        "guzzlehttp/uri-template": "^1.0"
+        "guzzlehttp/uri-template": "^1.0",
+        "laravel-hyperf/support": "^0.1"
     },
     "config": {
         "sort-packages": true
