--- a/src/process/composer.json
+++ b/src/process/composer.json
@@ -29,7 +29,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LaravelHyperf\\Process\\": ""
+            "LaravelHyperf\\Process\\": "src/"
         }
     },
     "extra": {
