improve: run ProcessTest to test suite

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,16 +10,16 @@
          displayDetailsOnTestsThatTriggerWarnings="true"
          displayDetailsOnTestsThatTriggerNotices="true">
     <testsuites>
-        <testsuite name="Hyperf Packages Test Suite">
+        <testsuite name="Laravel Hyperf Packages Test Suite">
             <directory suffix="Test.php">./tests</directory>
             <exclude>./tests/Prompts</exclude>
-            <exclude>./tests/Process</exclude>
         </testsuite>
     </testsuites>
     <php>
         <ini name="error_reporting" value="-1"/>
         <ini name="display_errors" value="on"/>
         <ini name="display_startup_errors" value="on"/>
-        <ini name="memory_limit" value="1024M" />
+        <ini name="memory_limit" value="1024M"/>
+        <env name="RUN_BLOCKING_TESTS" value="false" force="true"/>
     </php>
 </phpunit>
