--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
             "LaravelHyperf\\Prompts\\": "src/prompts/src/",
             "LaravelHyperf\\Queue\\": "src/queue/src/",
             "LaravelHyperf\\Router\\": "src/router/src/",
+            "LaravelHyperf\\Scheduling\\": "src/scheduling/src/",
             "LaravelHyperf\\Session\\": "src/session/src/",
             "LaravelHyperf\\Support\\": "src/support/src/",
             "LaravelHyperf\\Telescope\\": "src/telescope/src/"
@@ -94,7 +95,6 @@
         "hyperf/cache": "~3.1.0",
         "hyperf/command": "~3.1.0",
         "hyperf/config": "~3.1.0",
-        "hyperf/crontab": "~3.1.0",
         "hyperf/database-sqlite": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
         "hyperf/dispatcher": "~3.1.0",
@@ -118,7 +118,8 @@
         "symfony/error-handler": "^6.3",
         "symfony/mailer": "^6.2",
         "tijsverkoyen/css-to-inline-styles": "^2.2.5",
-        "symfony/process": "^6.2"
+        "symfony/process": "^6.2",
+        "dragonmantank/cron-expression": "^3.3.2"
     },
     "replace": {
         "laravel-hyperf/auth": "self.version",
@@ -148,6 +149,7 @@
         "laravel-hyperf/prompts": "self.version",
         "laravel-hyperf/queue": "self.version",
         "laravel-hyperf/router": "self.version",
+        "laravel-hyperf/scheduling": "self.version",
         "laravel-hyperf/session": "self.version",
         "laravel-hyperf/support": "self.version",
         "laravel-hyperf/telescope": "self.version"
@@ -213,6 +215,7 @@
                 "LaravelHyperf\\Notifications\\ConfigProvider",
                 "LaravelHyperf\\Queue\\ConfigProvider",
                 "LaravelHyperf\\Router\\ConfigProvider",
+                "LaravelHyperf\\Scheduling\\ConfigProvider",
                 "LaravelHyperf\\Session\\ConfigProvider",
                 "LaravelHyperf\\Telescope\\ConfigProvider"
             ]
